fixed button caption alignment

--- a/src/css/objects.css
+++ b/src/css/objects.css
@@ -17,6 +17,7 @@ div.ResizeHandle
 	bottom: 0;
 	width: 16px;
 	height: 16px;
+	z-index: 10;
 }
 
 
@@ -59,6 +60,9 @@ div.FieldOutlines div.Field
 div.Button
 {
 	/*outline: none;*/
+	/*display: block;
+	position: absolute;*/
+	
 }
 
 
@@ -74,6 +78,19 @@ div.ButtonOutlines div.Button
 }
 
 
+div.Button div.St
+{
+	display: table-cell;
+	position: relative;
+	text-align: center;
+	vertical-align: middle;
+}
+
+
+div.Button div.Cp
+{
+	display: inline-block;
+}
 
 
 
